--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/contacts-list/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contacts List</title>
     <link
@@ -11,8 +11,8 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
-    <script type="module" crossorigin src="/assets/index.553b0619.js"></script>
-    <link rel="stylesheet" href="/assets/index.56f06e13.css">
+    <script type="module" crossorigin src="/contacts-list/assets/index.75ddccc2.js"></script>
+    <link rel="stylesheet" href="/contacts-list/assets/index.aa92342f.css">
   </head>
   <body>
     <div id="root"></div>
